--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,236 @@
+@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+html {
+  font-family: "Kumbh Sans", sans-serif;
+}
+
+body {
+  background-color: hsl(25deg, 100%, 94%);
+}
+
+p, ul {
+  font-size: 1rem;
+  color: hsl(219deg, 9%, 45%);
+  font-weight: 400;
+}
+
+h1, h3 {
+  color: hsl(220deg, 13%, 13%);
+}
+
+h4 {
+  color: hsl(26deg, 100%, 55%);
+}
+
+ul {
+  list-style-type: none;
+}
+
+.mobile-menu {
+  display: none;
+  background-color: hsl(25deg, 100%, 94%);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 3;
+  height: 100vh;
+  width: 60%;
+  padding: 1.5rem;
+}
+.mobile-menu img {
+  margin-bottom: 2rem;
+}
+.mobile-menu img:hover {
+  cursor: pointer;
+  filter: invert(63%) sepia(56%) saturate(4587%) hue-rotate(348deg) brightness(106%) contrast(101%);
+}
+.mobile-menu li {
+  font-weight: 700;
+  margin: 1.5rem 0;
+  color: hsl(220deg, 13%, 13%);
+}
+.mobile-menu li:hover {
+  cursor: pointer;
+  color: hsl(26deg, 100%, 55%);
+}
+
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  background-color: hsl(25deg, 100%, 94%);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+header .desktop-menu {
+  display: none;
+}
+header .main-menu .mobile-menu-btn {
+  padding: 5px 5px;
+  margin-right: 2px;
+}
+header .main-menu .mobile-menu-btn:hover {
+  cursor: pointer;
+  filter: invert(63%) sepia(56%) saturate(4587%) hue-rotate(348deg) brightness(106%) contrast(101%);
+}
+header .main-menu .logo {
+  padding: 5px 5px;
+}
+header .main-menu .logo:hover {
+  cursor: pointer;
+}
+header .account-menu {
+  flex-basis: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+header .account-menu .cart {
+  width: 22px;
+  height: 22px;
+}
+header .account-menu .cart:hover {
+  cursor: pointer;
+  filter: invert(63%) sepia(56%) saturate(4587%) hue-rotate(348deg) brightness(106%) contrast(101%);
+}
+header .account-menu .account {
+  width: 30px;
+}
+header .account-menu .account:hover {
+  cursor: pointer;
+  border: 1px solid hsl(26deg, 100%, 55%);
+  border-radius: 50%;
+}
+
+.main-content {
+  margin-top: 2rem;
+}
+.main-content .thumbnail-wrapper .desktop-thumbnail {
+  display: none;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail {
+  position: relative;
+  overflow: hidden;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail #close-btn-lightbox-mobile {
+  display: none;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail .button {
+  position: relative;
+  padding: 1rem;
+  left: -3px;
+  top: -5px;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail .button:hover {
+  cursor: pointer;
+  filter: invert(63%) sepia(56%) saturate(4587%) hue-rotate(348deg) brightness(106%) contrast(101%);
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail .btn-wrapper {
+  background-color: hsl(25deg, 100%, 94%);
+  border-radius: 50%;
+  position: absolute;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail .btn-wrapper.prev {
+  left: 1rem;
+  top: 45%;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail .btn-wrapper.next {
+  right: 1rem;
+  top: 45%;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail .main-img {
+  width: 100%;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail .main-img:hover {
+  cursor: pointer;
+}
+.main-content .thumbnail-wrapper .mobile-thumbnail .mobile-main-img {
+  display: flex;
+}
+.main-content .desc-wrapper {
+  margin: 1.5rem;
+}
+.main-content .desc-wrapper .sneaker-company {
+  font-variant-caps: all-small-caps;
+  font-size: 1.1rem;
+  letter-spacing: 2px;
+  font-weight: 700;
+}
+.main-content .desc-wrapper .product-name {
+  margin: 1rem 0;
+  font-weight: 700;
+  font-size: 1.8rem;
+  line-height: 2rem;
+}
+.main-content .desc-wrapper .product-desc {
+  margin: 1rem 0;
+  line-height: 1.6rem;
+}
+.main-content .desc-wrapper .price-wrapper {
+  margin: 2rem 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-content .desc-wrapper .price-wrapper .sale-price {
+  display: flex;
+  flex-basis: 150px;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-content .desc-wrapper .price-wrapper .sale-price .discounted-price {
+  font-size: 1.7rem;
+  font-weight: 700;
+}
+.main-content .desc-wrapper .price-wrapper .default-price {
+  color: hsl(220deg, 14%, 75%);
+  font-weight: 700;
+  text-decoration: line-through;
+}
+.main-content .desc-wrapper .cart-add-wrapper .quantity-wrapper {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+.main-content .desc-wrapper .cart-add-wrapper .quantity-wrapper img {
+  padding: 1rem;
+}
+.main-content .desc-wrapper .cart-add-wrapper .quantity-wrapper img:hover {
+  cursor: pointer;
+  opacity: 0.6;
+}
+.main-content .desc-wrapper .cart-add-wrapper button {
+  margin: 1.5rem 0;
+  width: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: hsl(26deg, 100%, 55%);
+  border: none;
+  border-radius: 10px;
+  color: hsl(0deg, 0%, 100%);
+  font-weight: 700;
+}
+.main-content .desc-wrapper .cart-add-wrapper button img {
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+}
+.main-content .desc-wrapper .cart-add-wrapper button:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }/*# sourceMappingURL=style.css.map */
