--- a/styles/style.css
+++ b/styles/style.css
@@ -112,7 +112,9 @@ header .account-menu .account:hover {
 }
 
 .main-content {
+  margin: 0 auto;
   margin-top: 2rem;
+  max-width: 400px;
 }
 .main-content .thumbnail-wrapper .desktop-thumbnail {
   display: none;
@@ -198,6 +200,9 @@ header .account-menu .account:hover {
   font-weight: 700;
   text-decoration: line-through;
 }
+.main-content .desc-wrapper .cart-add-wrapper {
+  font-weight: 700;
+}
 .main-content .desc-wrapper .cart-add-wrapper .quantity-wrapper {
   width: 100%;
   display: flex;
@@ -213,7 +218,8 @@ header .account-menu .account:hover {
   opacity: 0.6;
 }
 .main-content .desc-wrapper .cart-add-wrapper button {
-  margin: 1.5rem 0;
+  margin-top: 1rem;
+  margin-bottom: 5rem;
   width: 100%;
   padding: 1rem;
   display: flex;
@@ -224,11 +230,12 @@ header .account-menu .account:hover {
   border-radius: 10px;
   color: hsl(0deg, 0%, 100%);
   font-weight: 700;
+  font-size: 1rem;
 }
 .main-content .desc-wrapper .cart-add-wrapper button img {
-  width: 15px;
-  height: 15px;
-  margin-right: 10px;
+  width: 18px;
+  height: 18px;
+  margin-right: 1rem;
 }
 .main-content .desc-wrapper .cart-add-wrapper button:hover {
   cursor: pointer;
