--- a/styles/style.css
+++ b/styles/style.css
@@ -107,7 +107,7 @@ header .account-menu .account {
 }
 header .account-menu .account:hover {
   cursor: pointer;
-  border: 1px solid hsl(26deg, 100%, 55%);
+  border: 2px solid hsl(26deg, 100%, 55%);
   border-radius: 50%;
 }
 
@@ -240,4 +240,129 @@ header .account-menu .account:hover {
 .main-content .desc-wrapper .cart-add-wrapper button:hover {
   cursor: pointer;
   opacity: 0.6;
+}
+
+@media only screen and (min-width: 700px) {
+  header {
+    padding: 1rem;
+    max-width: 1100px;
+    margin: 0 auto;
+    position: static;
+    padding-bottom: 2rem;
+  }
+  header .main-menu {
+    flex-basis: 60%;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+  }
+  header .main-menu .mobile-menu-btn {
+    display: none;
+  }
+  header .main-menu .desktop-menu {
+    display: block;
+    flex: 1;
+    margin-left: 1rem;
+  }
+  header .main-menu ul {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  header .main-menu ul li {
+    padding: 2rem 0;
+  }
+  header .main-menu ul li:hover {
+    cursor: pointer;
+    color: hsl(220deg, 13%, 13%);
+    border-bottom: solid 4px hsl(26deg, 100%, 55%);
+    margin-bottom: -4px;
+  }
+  header .account-menu {
+    flex-basis: 10%;
+  }
+  header .account-menu .account {
+    width: 40px;
+  }
+  .main-content {
+    max-width: 1100px;
+    padding: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .main-content .mobile-thumbnail {
+    display: none;
+  }
+  .main-content .thumbnail-wrapper {
+    overflow: hidden;
+    flex-basis: 45%;
+  }
+  .main-content .thumbnail-wrapper .lightbox {
+    display: none;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail {
+    display: block;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .selected-image {
+    display: flex;
+    width: 100%;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .selected-image img {
+    width: 100%;
+    border-radius: 20px;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .selected-image img:hover {
+    cursor: pointer;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .image-list {
+    display: flex;
+    justify-content: space-between;
+    margin: 2rem 0;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .image-list .thumbnail {
+    width: 20%;
+    border-radius: 10px;
+    overflow: hidden;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .image-list .thumbnail .thumbnail-img {
+    width: 100%;
+    height: 100%;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .image-list .thumbnail:hover {
+    cursor: pointer;
+    opacity: 0.6;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .image-list .selected {
+    border: solid 3px hsl(26deg, 100%, 55%);
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .image-list .selected .thumbnail-img {
+    opacity: 0.2;
+  }
+  .main-content .thumbnail-wrapper .desktop-thumbnail .image-list .selected:hover {
+    opacity: 1;
+  }
+  .main-content .desc-wrapper {
+    flex-basis: 45%;
+  }
+  .main-content .desc-wrapper .price-wrapper {
+    display: block;
+  }
+  .main-content .desc-wrapper .price-wrapper .sale-price {
+    justify-content: flex-start;
+  }
+  .main-content .desc-wrapper .price-wrapper .sale-price .discount {
+    margin-left: 2rem;
+  }
+  .main-content .desc-wrapper .price-wrapper .default-price {
+    margin: 0.5rem 0;
+  }
+  .main-content .desc-wrapper .cart-add-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .main-content .desc-wrapper .cart-add-wrapper button {
+    margin: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
