--- a/styles/style.scss
+++ b/styles/style.scss
@@ -112,7 +112,7 @@ header{
             width: 30px;
             &:hover{
                 cursor: pointer;
-                border: 1px solid $orange;
+                border: 2px solid $orange;
                 border-radius: 50%;
             }
         }
@@ -256,6 +256,131 @@ header{
             }
         }
     }
+}
 
 
+@media only screen and (min-width: 700px) {
+    header{
+        padding: 1rem;
+        max-width: 1100px;
+        margin: 0 auto;
+        position: static;
+        padding-bottom: 2rem;
+        .main-menu{
+            flex-basis: 60%;
+            display: flex;
+            align-items: center;
+            justify-content: space-evenly;
+            .mobile-menu-btn{
+                display: none;
+            }
+            .desktop-menu{
+                display: block;
+                flex:1;
+                margin-left: 1rem;
+            }
+            ul{
+                display: flex;
+                justify-content: space-around;
+                align-items: center;
+                li{
+                    padding: 2rem 0;
+                    &:hover{
+                        cursor: pointer;
+                        color: $very-dark-blue;
+                        border-bottom: solid 4px $orange;
+                        margin-bottom: -4px;
+                    }
+                }
+            }
+        }
+        .account-menu{
+            flex-basis: 10%;
+            .account{
+                width: 40px;
+            }
+        }
+    }
+
+    .main-content{
+        max-width: 1100px;
+        padding: 2rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .mobile-thumbnail{
+            display: none;
+        }
+        .thumbnail-wrapper{
+            overflow: hidden;
+            flex-basis: 45%;
+            .lightbox{
+                display: none;
+            }
+            .desktop-thumbnail{
+                display: block;
+                .selected-image{
+                    display: flex;
+                    width: 100%;
+                    img{
+                        width: 100%;
+                        border-radius: 20px;
+                        &:hover{
+                            cursor: pointer;
+                        }
+                    }
+                }
+                .image-list{
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 2rem 0;
+                    .thumbnail{
+                        width: 20%;
+                        border-radius: 10px;
+                        overflow: hidden;
+                        .thumbnail-img{
+                            width: 100%;
+                            height: 100%;
+                        }
+                        &:hover{
+                            cursor: pointer;
+                            opacity: 0.6;
+                        }
+                    }
+                    .selected{
+                        border: solid 3px $orange;
+                        .thumbnail-img{
+                            opacity: 0.2;
+                        }
+                        &:hover{
+                            opacity: 1;
+                        }
+                    }
+                }
+            }
+        }
+        .desc-wrapper{
+            flex-basis: 45%;
+            .price-wrapper{
+                display: block;
+                .sale-price{
+                    justify-content: flex-start;
+                    .discount{
+                        margin-left: 2rem;
+                    }
+                }
+                .default-price{
+                    margin: 0.5rem 0;
+                }
+            }
+            .cart-add-wrapper{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                button{
+                    margin: 0;
+                }
+            }
+        }
+    }
 }
