--- a/styles/style.scss
+++ b/styles/style.scss
@@ -267,7 +267,7 @@ header{
         position: static;
         padding-bottom: 2rem;
         .main-menu{
-            flex-basis: 60%;
+            flex-basis: 570px;
             display: flex;
             align-items: center;
             justify-content: space-evenly;
@@ -295,7 +295,7 @@ header{
             }
         }
         .account-menu{
-            flex-basis: 10%;
+            flex-basis: 88px;
             .account{
                 width: 40px;
             }
