--- a/styles/style.css
+++ b/styles/style.css
@@ -104,6 +104,7 @@ header .account-menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 header .account-menu .cart {
   width: 35px;
@@ -121,6 +122,85 @@ header .account-menu .account:hover {
   cursor: pointer;
   border: 2px solid hsl(26deg, 100%, 55%);
   border-radius: 50%;
+}
+header .cart-content-wrapper {
+  display: none;
+  position: absolute;
+  top: 4.8rem;
+  left: 0;
+  right: 0;
+  background-color: hsl(25deg, 100%, 94%);
+  margin-inline: 0.5rem;
+  padding: 1.3rem;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+header .cart-content-wrapper .cart-content {
+  margin-top: 3rem;
+  width: 100%;
+  padding-bottom: 0.5rem;
+}
+header .cart-content-wrapper .cart-content .title {
+  color: hsl(220deg, 13%, 13%);
+}
+header .cart-content-wrapper .cart-content .empty-cart {
+  width: 100%;
+  height: 8rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+header .cart-content-wrapper .cart-content .empty-cart p {
+  font-weight: 700;
+  color: hsl(219deg, 9%, 45%);
+}
+header .cart-content-wrapper .cart-content .product-checkout {
+  display: none;
+}
+header .cart-content-wrapper .cart-content .product-checkout .product-total {
+  width: 100%;
+  margin: 1.5rem 0;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  align-items: center;
+}
+header .cart-content-wrapper .cart-content .product-checkout .product-total .thumbnail {
+  width: 40px;
+  border-radius: 5px;
+}
+header .cart-content-wrapper .cart-content .product-checkout .product-total .desc {
+  font-size: 0.9em;
+}
+header .cart-content-wrapper .cart-content .product-checkout .product-total .desc .title {
+  color: hsl(219deg, 9%, 45%);
+  margin-bottom: 5px;
+}
+header .cart-content-wrapper .cart-content .product-checkout .product-total .desc .price {
+  color: hsl(219deg, 9%, 45%);
+  margin-right: 8px;
+}
+header .cart-content-wrapper .cart-content .product-checkout .product-total .desc .total {
+  color: hsl(220deg, 13%, 13%);
+  font-weight: 700;
+}
+header .cart-content-wrapper .cart-content .product-checkout .product-total #delete-btn:hover {
+  cursor: pointer;
+}
+header .cart-content-wrapper .cart-content .product-checkout .checkout-btn {
+  width: 100%;
+  border: none;
+  border-radius: 10px;
+  background-color: hsl(26deg, 100%, 55%);
+  color: hsl(25deg, 100%, 94%);
+  padding: 1rem;
+  font-size: 0.9rem;
+  font-weight: 700;
+}
+header .cart-content-wrapper .cart-content .product-checkout .checkout-btn:hover {
+  cursor: pointer;
+  opacity: 0.6;
 }
 
 .main-content {
@@ -158,6 +238,9 @@ header .account-menu .account:hover {
 }
 .main-content .lightbox-thumbnail-wrapper .lightbox-thumbnail .selected-image .main-img:hover {
   cursor: pointer;
+}
+.main-content .lightbox-thumbnail-wrapper .lightbox-thumbnail .selected-image .main-img.first {
+  margin-left: 0;
 }
 .main-content .lightbox-thumbnail-wrapper .lightbox-thumbnail .image-list {
   display: flex;
@@ -227,6 +310,9 @@ header .account-menu .account:hover {
   position: relative;
   overflow: hidden;
 }
+.main-content .thumbnail-wrapper .main-thumbnail .button {
+  padding: 0.5rem;
+}
 .main-content .thumbnail-wrapper .main-thumbnail .button:hover {
   cursor: pointer;
   filter: invert(63%) sepia(56%) saturate(4587%) hue-rotate(348deg) brightness(106%) contrast(101%);
@@ -247,17 +333,20 @@ header .account-menu .account:hover {
 }
 .main-content .thumbnail-wrapper .main-thumbnail .btn-wrapper.prev {
   left: 1rem;
-  top: 45%;
+  top: 50%;
 }
 .main-content .thumbnail-wrapper .main-thumbnail .btn-wrapper.next {
   right: 1rem;
-  top: 45%;
+  top: 50%;
 }
 .main-content .thumbnail-wrapper .main-thumbnail .main-img {
   width: 100%;
 }
 .main-content .thumbnail-wrapper .main-thumbnail .main-img:hover {
   cursor: pointer;
+}
+.main-content .thumbnail-wrapper .main-thumbnail .main-img.first {
+  margin-left: 0;
 }
 .main-content .thumbnail-wrapper .main-thumbnail .selected-image {
   display: flex;
@@ -347,13 +436,34 @@ header .account-menu .account:hover {
   opacity: 0.6;
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 450px) {
+  header .cart-content-wrapper {
+    left: auto;
+    right: 0;
+    width: 350px;
+    z-index: 1;
+  }
+}
+@media only screen and (min-width: 600px) {
+  header {
+    padding: 2rem 1rem;
+  }
+  .main-content {
+    max-width: 600px;
+  }
+  .main-content .lightbox-thumbnail-wrapper .lightbox-thumbnail {
+    width: 350px;
+  }
+  .main-content .lightbox-thumbnail-wrapper .lightbox-thumbnail .btn-wrapper {
+    top: 35%;
+  }
+}
+@media only screen and (min-width: 992px) {
   header {
     padding: 1rem;
     max-width: 1100px;
     margin: 0 auto;
     position: static;
-    padding-bottom: 2rem;
   }
   header .main-menu {
     flex-basis: 570px;
@@ -389,8 +499,12 @@ header .account-menu .account:hover {
   header .account-menu .account {
     width: 40px;
   }
+  header .cart-content-wrapper {
+    top: 7rem;
+  }
   .main-content {
     max-width: 1100px;
+    margin-top: 0;
     padding: 2rem;
     display: flex;
     align-items: center;
