--- a/styles/style.scss
+++ b/styles/style.scss
@@ -110,6 +110,7 @@ header{
         display: flex;
         justify-content: space-between;
         align-items: center;
+        position: relative;
         .cart{
             width: 35px;
             height: 35px;
@@ -128,6 +129,88 @@ header{
             }
         }
         
+    }
+    .cart-content-wrapper{
+        display: none;
+        position: absolute;
+        top: 4.8rem;
+        left: 0;
+        right: 0;
+        background-color: $pale-orange;
+        margin-inline: 0.5rem;
+        padding: 1.3rem;
+        border-radius: 10px;
+        box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+        .cart-content{
+            margin-top: 3rem;
+            width: 100%;
+            padding-bottom: 0.5rem;
+            .title{
+                color: $very-dark-blue;
+            }
+            .empty-cart{
+                width: 100%;
+                height: 8rem;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                p{
+                    font-weight: 700;
+                    color: $dark-grayish-blue;
+                }
+            }
+            .product-checkout{
+                display: none;
+                .product-total{
+                    width: 100%;
+                    margin: 1.5rem 0;
+                    display: flex;
+                    gap:1rem;
+                    justify-content: space-between;
+                    align-items: center;
+                    .thumbnail{
+                        width: 40px;
+                        border-radius: 5px;
+                    }
+                    .desc{
+                        font-size: 0.9em;
+                        .title{
+                            color: $dark-grayish-blue;
+                            margin-bottom: 5px;
+                        }
+                        .price{
+                            color: $dark-grayish-blue;
+                            margin-right: 8px;
+                        }
+                        .total{
+                            color: $very-dark-blue;
+                            font-weight: 700;
+                        }
+                    }
+                    #delete-btn{
+                        &:hover{
+                            cursor: pointer;
+                        }
+                    }
+                }
+                .checkout-btn{
+                    width: 100%;
+                    border: none;
+                    border-radius: 10px;
+                    background-color: $orange;
+                    color: $pale-orange;
+                    padding: 1rem;
+                    font-size: 0.9rem;
+                    font-weight: 700;
+                    &:hover{
+                        cursor: pointer;
+                        opacity: 0.6;
+                    }
+                }
+            }
+        }
     }
 }
 
@@ -168,6 +251,9 @@ header{
                     &:hover{
                         cursor: pointer;
                     }
+                }
+                .main-img.first{
+                    margin-left: 0;
                 }
             }
             .image-list{
@@ -246,6 +332,7 @@ header{
             position: relative;
             overflow: hidden;
             .button{
+                padding: 0.5rem;
                 &:hover{
                     cursor: pointer;
                     filter: invert(63%) sepia(56%) saturate(4587%) hue-rotate(348deg) brightness(106%) contrast(101%);
@@ -269,22 +356,25 @@ header{
             }
             .btn-wrapper.prev{
                 left:1rem;
-                top:45%;
+                top:50%;
             }
             .btn-wrapper.next{
                 right:1rem;
-                top:45%;
+                top:50%;
             }
             .main-img{
                 width: 100%;
-                //object-fit: cover;
                 &:hover{
                     cursor: pointer;
                 }
             }
+            .main-img.first{
+                margin-left: 0;
+            }
             .selected-image{
                 display:flex;
                 //height: 300px;
+                //position: relative;
             }
         }
 
@@ -378,13 +468,43 @@ header{
 }
 
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 450px) {
+    header{
+        .cart-content-wrapper{
+            left: auto;
+            right: 0;
+            width: 350px;
+            z-index: 1;
+        }
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    header{
+        padding: 2rem 1rem;
+    }
+    .main-content{
+        max-width: 600px;
+    }
+    .main-content{
+        .lightbox-thumbnail-wrapper{
+            .lightbox-thumbnail{
+                width: 350px;
+                .btn-wrapper{
+                    top:35%
+                }
+            }
+        }
+    }
+    
+}
+
+@media only screen and (min-width: 992px) {
     header{
         padding: 1rem;
         max-width: 1100px;
         margin: 0 auto;
         position: static;
-        padding-bottom: 2rem;
         .main-menu{
             flex-basis: 570px;
             display: flex;
@@ -419,10 +539,14 @@ header{
                 width: 40px;
             }
         }
+        .cart-content-wrapper{
+            top: 7rem;
+        }
     }
 
     .main-content{
         max-width: 1100px;
+        margin-top: 0;
         padding: 2rem;
         display: flex;
         align-items: center;
